Bug 38136 - [piketon][drm:intel_dp_aux_ch] *ERROR* dp_aux_ch not started status 0x8025003e with DP interface when do testdisplay -d 16,24 or 32
Summary: [piketon][drm:intel_dp_aux_ch] *ERROR* dp_aux_ch not started status 0x8025003...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: XOrg git
Hardware: Other Linux (All)
: medium normal
Assignee: Jesse Barnes
QA Contact:
URL:
Whiteboard:
Keywords:
: 38864 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-06-09 22:37 UTC by bo.b.wang
Modified: 2017-09-04 10:06 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
error info when to testdisplay -d 16, 24 or 32 (36.88 KB, text/plain)
2011-06-09 22:37 UTC, bo.b.wang
no flags Details

Description bo.b.wang 2011-06-09 22:37:23 UTC
Created attachment 47799 [details]
error info when to testdisplay -d 16, 24 or 32

System Environment:
--------------------------
kernel: (drm-intel-next)commit:6a574b5b9b186e28abd3e571dfd1700c5220b510
port: DP port
platform: piketon

Bug detailed description:
-------------------------
when do "testdisplay -d 16, 24 or 32" ,there will be some error information in dmesg like "[drm:intel_dp_aux_ch] *ERROR* dp_aux_ch not started status 0x8025003e".

this issue also exists in Linux 3.0-rc1.

Reproduce steps:
----------------
1. DP port
2. testdisplay -d 16, 24 or 32
Comment 1 meng 2011-06-27 18:50:24 UTC
The problem also exists on 2010Q4 release.
Comment 2 Chris Wilson 2011-07-02 01:39:20 UTC
I think this should be fixed by Jesse's recent DP try-harder patch set...
Comment 3 Yi Sun 2011-07-21 19:31:29 UTC
The error information still appeared on Sugarbay.
Comment 4 Jesse Barnes 2011-07-28 17:45:10 UTC
*** Bug 38864 has been marked as a duplicate of this bug. ***
Comment 5 Florian Mickler 2011-08-08 01:47:00 UTC
A patch referencing this bug report has been merged in Linux v3.1-rc1:

commit 11bee43ebba0bfc92165c059f6e9869197ea8889
Author: Jesse Barnes <jbarnes@virtuousgeek.org>
Date:   Mon Aug 1 15:02:20 2011 -0700

    drm/i915/dp: wait for previous AUX channel activity to clear
Comment 6 Jesse Barnes 2011-08-08 09:49:50 UTC
Thanks Florian.
Comment 7 cc 2011-08-08 20:06:23 UTC
(In reply to comment #5)
> A patch referencing this bug report has been merged in Linux v3.1-rc1:
> 
> commit 11bee43ebba0bfc92165c059f6e9869197ea8889
> Author: Jesse Barnes <jbarnes@virtuousgeek.org>
> Date:   Mon Aug 1 15:02:20 2011 -0700
> 
>     drm/i915/dp: wait for previous AUX channel activity to clear

This patch has fixed the issue. Tested-by: ChenChao  chao.a.chen@intel.com
Comment 8 Jari Tahvanainen 2017-09-04 10:06:55 UTC
Closing old verified+fixed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.